made some mods to make more compatible with firefox

--- a/src/popup.html
+++ b/src/popup.html
@@ -9,6 +9,8 @@
 
     <!-- Load styles -->
     <link rel="stylesheet" href="popup.css" />
+    <!-- Remove background.js and content.js from popup.html -->
+    <script defer src="popup.js"></script>
 </head>
 
 <body>
