--- a/src/popup.html
+++ b/src/popup.html
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="topic-selection">
-            <h2>Select Topics to Block</h2>
+            <h2>Add Topics to Block</h2>
             <input type="text" id="topic-input" placeholder="Enter a topic" />
             <button id="add-topic">Add Topic</button>
             <ul id="topic-list"></ul>
